// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Swiper > :props > :animation fade 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content t-swiper-fade"
    >
      <div
        class="t-swiper__container"
      >
        
        <div
          class="t-swiper__container__item t-swiper__fade"
          style="opacity: 1; z-index: 1;"
        >
          
          
          1
          
          
        </div>
        
      </div>
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    >
      
      <li
        class="t-swiper__navigation-item t-is-active"
      >
        <span />
      </li>
      
    </ul>
    <!---->
  </div>
</div>
`;

exports[`Swiper > :props > :autoplay 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      >
        
        <div
          class="t-swiper__container__item"
        >
          
          
          1
          
          
        </div>
        
      </div>
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    >
      
      <li
        class="t-swiper__navigation-item t-is-active"
      >
        <span />
      </li>
      
    </ul>
    <!---->
  </div>
</div>
`;

exports[`Swiper > :props > :defaultCurrent 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-200%, 0px, 0px);"
      >
        
        <div
          class="t-swiper__container__item"
        >
          
          
          2
          
          
        </div>
        <div
          class="t-swiper__container__item"
        >
          
          
          1
          
          
        </div>
        <div
          class="t-swiper__container__item"
        >
          
          
          2
          
          
        </div>
        <div
          class="t-swiper__container__item"
        >
          
          
          1
          
          
        </div>
        
      </div>
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    >
      
      <li
        class="t-swiper__navigation-item"
      >
        <span />
      </li>
      <li
        class="t-swiper__navigation-item"
      >
        <span />
      </li>
      
    </ul>
    <!---->
  </div>
</div>
`;

exports[`Swiper > :props > :direction 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside t-swiper--vertical"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(0, -0%, 0px);"
      >
        
        <div
          class="t-swiper__container__item"
        >
          
          
          2
          
          
        </div>
        <div
          class="t-swiper__container__item"
        >
          
          
          1
          
          
        </div>
        <div
          class="t-swiper__container__item"
        >
          
          
          2
          
          
        </div>
        <div
          class="t-swiper__container__item"
        >
          
          
          1
          
          
        </div>
        
      </div>
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    >
      
      <li
        class="t-swiper__navigation-item t-is-active"
      >
        <span />
      </li>
      <li
        class="t-swiper__navigation-item"
      >
        <span />
      </li>
      
    </ul>
    <!---->
  </div>
</div>
`;

exports[`Swiper > :props > :duration 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      >
        
        <div
          class="t-swiper__container__item"
        >
          
          
          2
          
          
        </div>
        <div
          class="t-swiper__container__item"
        >
          
          
          1
          
          
        </div>
        <div
          class="t-swiper__container__item"
        >
          
          
          2
          
          
        </div>
        <div
          class="t-swiper__container__item"
        >
          
          
          1
          
          
        </div>
        
      </div>
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    >
      
      <li
        class="t-swiper__navigation-item t-is-active"
      >
        <span />
      </li>
      <li
        class="t-swiper__navigation-item"
      >
        <span />
      </li>
      
    </ul>
    <!---->
  </div>
</div>
`;

exports[`Swiper > :props > :height 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      >
        
        <div
          class="t-swiper__container__item"
        >
          
          
          2
          
          
        </div>
        <div
          class="t-swiper__container__item"
        >
          
          
          1
          
          
        </div>
        <div
          class="t-swiper__container__item"
        >
          
          
          2
          
          
        </div>
        <div
          class="t-swiper__container__item"
        >
          
          
          1
          
          
        </div>
        
      </div>
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    >
      
      <li
        class="t-swiper__navigation-item t-is-active"
      >
        <span />
      </li>
      <li
        class="t-swiper__navigation-item"
      >
        <span />
      </li>
      
    </ul>
    <!---->
  </div>
</div>
`;

exports[`Swiper > :props > :interval 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      >
        
        <div
          class="t-swiper__container__item"
        >
          
          
          2
          
          
        </div>
        <div
          class="t-swiper__container__item"
        >
          
          
          1
          
          
        </div>
        <div
          class="t-swiper__container__item"
        >
          
          
          2
          
          
        </div>
        <div
          class="t-swiper__container__item"
        >
          
          
          1
          
          
        </div>
        
      </div>
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    >
      
      <li
        class="t-swiper__navigation-item t-is-active"
      >
        <span />
      </li>
      <li
        class="t-swiper__navigation-item"
      >
        <span />
      </li>
      
    </ul>
    <!---->
  </div>
</div>
`;

exports[`Swiper > :props > :loop 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      >
        
        <div
          class="t-swiper__container__item"
        >
          
          
          2
          
          
        </div>
        <div
          class="t-swiper__container__item"
        >
          
          
          1
          
          
        </div>
        <div
          class="t-swiper__container__item"
        >
          
          
          2
          
          
        </div>
        <div
          class="t-swiper__container__item"
        >
          
          
          1
          
          
        </div>
        
      </div>
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    >
      
      <li
        class="t-swiper__navigation-item t-is-active"
      >
        <span />
      </li>
      <li
        class="t-swiper__navigation-item"
      >
        <span />
      </li>
      
    </ul>
    <!---->
  </div>
</div>
`;

exports[`Swiper > :props > :navigation 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--outside t-swiper--large"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      >
        
        <div
          class="t-swiper__container__item"
        >
          
          
          2
          
          
        </div>
        <div
          class="t-swiper__container__item"
        >
          
          
          1
          
          
        </div>
        <div
          class="t-swiper__container__item"
        >
          
          
          2
          
          
        </div>
        <div
          class="t-swiper__container__item"
        >
          
          
          1
          
          
        </div>
        
      </div>
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-dots-bar"
    >
      
      <li
        class="t-swiper__navigation-item t-is-active"
      >
        <span />
      </li>
      <li
        class="t-swiper__navigation-item"
      >
        <span />
      </li>
      
    </ul>
    <!---->
  </div>
</div>
`;

exports[`Swiper > :props > :theme 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      >
        
        <div
          class="t-swiper__container__item"
        >
          
          
          2
          
          
        </div>
        <div
          class="t-swiper__container__item"
        >
          
          
          1
          
          
        </div>
        <div
          class="t-swiper__container__item"
        >
          
          
          2
          
          
        </div>
        <div
          class="t-swiper__container__item"
        >
          
          
          1
          
          
        </div>
        
      </div>
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    >
      
      <li
        class="t-swiper__navigation-item t-is-active"
      >
        <span />
      </li>
      <li
        class="t-swiper__navigation-item"
      >
        <span />
      </li>
      
    </ul>
    <!---->
  </div>
</div>
`;

exports[`Swiper > :props > :type 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content t-swiper-card"
    >
      <div
        class="t-swiper__container"
      >
        
        <div
          class="t-swiper__container__item t-swiper__card"
          style="transform: translateX(0px) scale(0.6325301204819277); transition: transform 0.3s ease; z-index: 1;"
        >
          
          
          2
          
          
        </div>
        <div
          class="t-swiper__container__item t-swiper__card t-is-active"
          style="transform: translateX(0px) scale(1); transition: transform 0.3s ease; z-index: 2;"
        >
          
          
          1
          
          
        </div>
        <div
          class="t-swiper__container__item t-swiper__card"
          style="transform: translateX(0px) scale(0.6325301204819277); transition: transform 0.3s ease; z-index: 1;"
        >
          
          
          2
          
          
        </div>
        <div
          class="t-swiper__container__item t-swiper__card t-is-active"
          style="transform: translateX(0px) scale(1); transition: transform 0.3s ease; z-index: 2;"
        >
          
          
          1
          
          
        </div>
        
      </div>
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    >
      
      <li
        class="t-swiper__navigation-item t-is-active"
      >
        <span />
      </li>
      <li
        class="t-swiper__navigation-item"
      >
        <span />
      </li>
      
    </ul>
    <!---->
  </div>
</div>
`;
